--- a/1.html
+++ b/1.html
@@ -10,12 +10,12 @@
     <div class="main">
         <div class="left">
              <img src="dhoni.jpg" alt="">
-             <h4 id="name">sampath</h4>
-             <h4 style="color:red">+91-7780184807</h4>
-             <a href="mailto:sampathatmuri31@gmail.com">mailto</a>
+             <h4 id="name">sagar</h4>
+             <h4 style="color:red">+91-999888833</h4>
+             <a href="mailto:davulurisagar12@gmail.com">mailto</a>
              <h2>Address:</h2>
              <hr>
-             <p>7-220,Tulasamma nagar,poranki vijayawada,521137</p>
+             <p>7-platno:999,Tulasi nagar,poranki vijayawada,521137</p>
 
         </div>
         <div class="right">
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                   <td>Tenth</td>
-                  <td>Tvnrm</td>
+                  <td>narayana/td>
                   <td>2014</td>
                   <td>9.5</td>
 
